landing page spacing issue

--- a/src/main/java/org/ednovo/gooru/client/mvp/home/res_homestyle.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/res_homestyle.css
@@ -3,7 +3,7 @@ header {
 }
 
 .banner {
-	margin-top: 0px;
+	margin-top: -36px;
 }
 
 .bannerInner .caption {
